@@ -6,6 +6,11 @@
 ---------------------------------------------
 - 2021-07-31                                -
 ---------------------------------------------
+.: WSW: Task - Update build command (WSW-132)
+
+---------------------------------------------
+- 2021-07-31                                -
+---------------------------------------------
 .: WSM: Task - Review Module (WSM-413)
 
 - 2021-07-20                                -
